--- a/src/style/reset.scss
+++ b/src/style/reset.scss
@@ -1,6 +1,9 @@
 @charset "utf-8";
 /* CSS Document */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;600;700;800;900&display=swap');
+
 * {
+  font-family: 'Inter', sans-serif;
   box-sizing: border-box;
 }
 
