--- a/src/index.css
+++ b/src/index.css
@@ -16,9 +16,18 @@
     @apply transition cursor-pointer flex justify-center items-center px-5 py-3 rounded-md bg-pointCol02 text-white hover:bg-pointCol03 hover:text-black;
   }
   .inputBox {
-    @apply border-[1px] border-black/[.3] border-solid w-full	 rounded-md h-9  pl-3 hover:outline-pointCol02 active:outline-pointCol02;
+    @apply transition border-[1px] border-black/[.3] border-solid w-full	 rounded-md h-9  pl-3 hover:outline-pointCol02 active:outline-pointCol02;
   }
   .labelText {
     @apply text-base font-light pt-5 pb-2.5 block;
+  }
+  .LoginBox {
+    @apply flex flex-col items-center bg-cover pt-24 bg-center pb-24;
+  }
+  .LoginForm {
+    @apply bg-white rounded-lg w-full shadow-lg mt-14 mb-10 p-11;
+  }
+  .snsBtn {
+    @apply transition flex justify-center items-center border-[1px] border-[rgba(0,0,0,.3)] shadow-md bg-white w-full h-[3.5rem] rounded-md my-1 hover:border-black;
   }
 }
