--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,7 @@
     @apply transition cursor-pointer flex justify-center items-center px-5 py-3 rounded-md bg-pointCol02 text-white hover:bg-pointCol03 hover:text-black;
   }
   .inputBox {
-    @apply transition border-[1px] border-black/[.3] border-solid w-full	 rounded-md h-9  pl-3 hover:outline-pointCol02 active:outline-pointCol02;
+    @apply transition border-[1px] border-black/[.3] border-solid w-full	 rounded-md h-9  pl-3 hover:outline-pointCol02 active:outline-pointCol02 min-h-[2.25rem];
   }
   .labelText {
     @apply text-base font-light pt-5 pb-2.5 block;
